- Fix bug #28466 (mbstring_convert_variables() problem).